// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideBar> component renders the UI render the unauthorized UI 1`] = `
<div
  id="SideBar"
>
  <h3>
    Expense Tracker
  </h3>
  <ul
    className="link_list"
  >
    <li>
      <a
        aria-current={null}
        href="/login"
        onClick={[Function]}
      >
        Log In
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/register"
        onClick={[Function]}
      >
        Register
      </a>
    </li>
  </ul>
</div>
`;

exports[`<SideBar> component renders the UI renders the authorized UI 1`] = `
<div
  id="SideBar"
>
  <h3>
    Expense Tracker
  </h3>
  <ul
    className="link_list"
  >
    <li>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        Dashboard
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/add-expense"
        onClick={[Function]}
      >
        Add Expense
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/expense-log"
        onClick={[Function]}
      >
        Expense Log
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/categories"
        onClick={[Function]}
      >
        Categories
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/payment-methods"
        onClick={[Function]}
      >
        Payment Methods
      </a>
    </li>
  </ul>
</div>
`;
